--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./node_modules/nodemon/bin/nodemon.js",
     "build": "tsc",
     "run": "nodemon",
     "tscstart": "tsc && node dest/index.js",
